--- a/index.html
+++ b/index.html
@@ -7,6 +7,169 @@
     <title>Fabricio Borgobello - Curriculum Vitae</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Fabricio Borgobello</h1>
+    <header>
+      <h1>Fabricio Borgobello</h1>
+      <p>Front-end developer</p>
+      <ul>
+        <li>fborgobello@gmail.com</li>
+        <li>(+34) 601504552</li>
+        <li>Barcelona, Spain</li>
+      </ul>
+      <ul>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/fabriborgobello/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://github.com/FabriBorgobello"
+            target="_blank"
+            rel="noopener noreferrer"
+            >GitHub</a
+          >
+        </li>
+      </ul>
+    </header>
+    <section>
+      <h2>WORK EXPERIENCE</h2>
+      <article>
+        <div>
+          <h3>Southern Code</h3>
+          <p>Nov 2021 - Sep 2023</p>
+        </div>
+        <div>
+          <h4>Back-end developer</h4>
+          <ul>
+            <li>
+              Developed microservices using NodeJs, Express, NestJs, and others
+              for e-commerce and printing platforms.
+            </li>
+            <li>
+              Implemented event-driven architecture and REST API for enhanced
+              integration and functionality.
+            </li>
+            <li>
+              Successfully met all project objectives within a six-month period,
+              ending September 2023.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h4>Front-end developer - Technical lead</h4>
+          <ul>
+            <li>
+              Led the transition to microservices architecture for a PropTech
+              platform using ReactJs/NextJs, Python/Django, and Azure DevOps.
+            </li>
+            <li>
+              Managed client relations and team assembly, ensuring alignment
+              with goals and high code quality.
+            </li>
+            <li>
+              Developed key tooling and UI libraries, enhancing scalability and
+              efficiency.
+            </li>
+            <li>
+              Successfully launched the project. Currently generating
+              significant revenue..
+            </li>
+          </ul>
+        </div>
+      </article>
+      <article>
+        <div>
+          <h3>Goiar</h3>
+          <p>Feb 2021 - Mar 2022</p>
+        </div>
+        <div>
+          <h4>Front-end developer - Mobile developer</h4>
+          <ul>
+            <li>
+              Front-end and mobile development for a multi-platform application
+              for personnel management.
+            </li>
+            <li>
+              UI design and layout development with React Js, TypeScript,
+              Angular and Ionic.
+            </li>
+          </ul>
+        </div>
+      </article>
+      <article>
+        <div>
+          <h3>DesitSA</h3>
+          <p>Jun 2020 - Mar 2021</p>
+        </div>
+        <div>
+          <h4>Front-end developer</h4>
+          <ul>
+            <li>
+              Specialized in developing front-end for a security and monitoring
+              software suite using React.js, Redux and Jest.
+            </li>
+            <li>
+              Collaborated in full-stack development with Node, Express,
+              MongoDB, and Mongoose, enhancing back-end functionality and
+              database interactions.
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
+    <section>
+      <h2>TEACHING AND MENTORSHIP EXPERIENCE</h2>
+      <article>
+        <div>
+          <h3>Next-U (short-term)</h3>
+          <p>Sept 2023 - Oct 2023</p>
+        </div>
+        <div>
+          <h4>Front-end Instructor - Project Mentor</h4>
+          <ul>
+            <li>
+              Teaching and mentoring students in class sessions for a two-month
+              project, guiding them through the development and execution of
+              projects that emulate real-world scenarios.
+            </li>
+          </ul>
+        </div>
+      </article>
+      <article>
+        <div>
+          <h3>CoderHouse (part-time)</h3>
+          <p>Nov 2020 – Jun 2022</p>
+        </div>
+        <div>
+          <h4>React Js teacher</h4>
+          <ul>
+            <li>
+              Provided engaging instruction in React.js, from foundational to
+              advanced topics, to a diverse group of learners. Facilitated
+              hands-on project experience with objective feedback to improve
+              learning outcomes.
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
+    <section>
+      <h3>ADDITIONAL SKILLS AND LANGUAGES</h3>
+      <ul>
+        <li>
+          <b>Skills:</b>
+          JavaScript, TypeScript, HTML, CSS/SCSS, ReactJs, NextJs, React Native,
+          Ionic, NodeJs, Express, NestJs, Django, SQL, Postgres, Figma, Git,
+          Docker, Cypress, Playwright, Jest, React Testing Library.
+        </li>
+        <li>
+          <b>Languages:</b>
+          English (Advanced), Spanish (Native), Italian (Advanced).
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
