--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Fabricio Borgobello - Curriculum Vitae</title>
   </head>
   <body
-    class="p-8 text-slate-800 bg-white max-w-[1000px] mx-auto print:p-0 print:max-w-full"
+    class="p-8 text-slate-800 bg-white max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
   >
     <header
       class="border-b-[1px] border-b-slate-500 pb-4 print:border-none print:pb-0"
@@ -20,8 +20,10 @@
         <h1 class="text-2xl font-bold">Fabricio Borgobello</h1>
         <p class="text-xl">Front-end developer</p>
       </div>
-      <div class="flex flex-col md:flex-row sm:justify-between mt-4">
-        <ul class="flex flex-col sm:flex-row sm:space-x-4 lg:space-x-6">
+      <div class="flex flex-col md:flex-row sm:justify-between mt-4 print:mt-2">
+        <ul
+          class="flex flex-col sm:flex-row sm:space-x-4 lg:space-x-6 print:space-x-2"
+        >
           <li class="flex items-center">
             <svg
               aria-hidden="true"
@@ -171,7 +173,7 @@
         </ul>
       </div>
     </header>
-    <section class="mt-8 space-y-4">
+    <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px]">
         WORK EXPERIENCE
       </h2>
@@ -274,7 +276,7 @@
         </div>
       </article>
     </section>
-    <section class="mt-8 space-y-4">
+    <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px]">
         TEACHING AND MENTORSHIP EXPERIENCE
       </h2>
@@ -312,7 +314,7 @@
         </div>
       </article>
     </section>
-    <section class="mt-8 space-y-4">
+    <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px]">
         ADDITIONAL SKILLS AND LANGUAGES
       </h2>
