Add vertical padding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Fabricio Borgobello - Curriculum Vitae</title>
   </head>
   <body
-    class="p-8 text-slate-800 bg-white max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
+    class="px-8 py-16 text-slate-800 bg-white max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
   >
     <header
       class="border-b-[1px] border-b-slate-500 pb-4 print:border-none print:pb-0"
