--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               href="https://www.linkedin.com/in/fabriborgobello/"
               target="_blank"
               rel="noopener noreferrer"
-              class="text-blue-600 flex items-center p-2 sm:p-0"
+              class="text-blue-600 flex items-center p-2 sm:p-0 hover:underline"
               ><svg
                 width="16"
                 height="16"
@@ -153,7 +153,7 @@
               href="https://github.com/FabriBorgobello/"
               target="_blank"
               rel="noopener noreferrer"
-              class="text-blue-600 flex items-center p-2 sm:p-0"
+              class="text-blue-600 flex items-center p-2 sm:p-0 hover:underline"
               ><svg
                 width="16"
                 height="16"
@@ -186,8 +186,8 @@
           <h4 class="italic">Front-end developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Developed fintech applications using ReactJs, NextJs, and
-              TypeScript.
+              Developed fintech applications using ReactJs, NextJs, TypeScript,
+              and NodeJs.
             </li>
           </ul>
         </div>
