--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
     </header>
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
-      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px]">
+      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         WORK EXPERIENCE
       </h2>
       <article>
@@ -277,7 +277,7 @@
       </article>
     </section>
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
-      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px]">
+      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         TEACHING AND MENTORSHIP EXPERIENCE
       </h2>
       <article>
@@ -315,7 +315,7 @@
       </article>
     </section>
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
-      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px]">
+      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         ADDITIONAL SKILLS AND LANGUAGES
       </h2>
       <ul class="ml-8 list-disc">
