--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </li>
             <li>
               Successfully launched the project. Currently generating
-              significant revenue..
+              significant revenue.
             </li>
           </ul>
         </div>
