--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Fabricio Borgobello - Curriculum Vitae</title>
   </head>
   <body
-    class="px-8 py-16 text-slate-800 bg-white max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
+    class="px-8 py-16 text-slate-800 dark:text-[#f5f5f5] bg-white dark:bg-[#121212] max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
   >
     <header
       class="border-b-[1px] border-b-slate-500 pb-4 print:border-none print:pb-0"
@@ -36,7 +36,7 @@
             >
               <path
                 d="M2.96666 4.26662C2.74575 4.10093 2.43235 4.14571 2.26667 4.36662C2.10098 4.58754 2.14575 4.90094 2.36667 5.06662L2.96666 4.26662ZM6.8 7.76659L6.5 8.16659L6.50001 8.16659L6.8 7.76659ZM9.2 7.76659L9.49999 8.16659L9.5 8.16659L9.2 7.76659ZM13.6333 5.06659C13.8542 4.9009 13.899 4.5875 13.7333 4.36659C13.5676 4.14567 13.2542 4.1009 13.0333 4.26659L13.6333 5.06659ZM2.36667 5.06662L6.5 8.16659L7.1 7.36658L2.96666 4.26662L2.36667 5.06662ZM6.50001 8.16659C7.38891 8.83325 8.61109 8.83325 9.49999 8.16659L8.90001 7.36658C8.36665 7.76659 7.63335 7.76659 7.09999 7.36658L6.50001 8.16659ZM9.5 8.16659L13.6333 5.06659L13.0333 4.26659L8.9 7.36659L9.5 8.16659ZM3.33333 3.83325H12.6667V2.83325H3.33333V3.83325ZM12.6667 3.83325C13.1269 3.83325 13.5 4.20635 13.5 4.66659H14.5C14.5 3.65406 13.6792 2.83325 12.6667 2.83325V3.83325ZM13.5 4.66659V11.3333H14.5V4.66659H13.5ZM13.5 11.3333C13.5 11.7935 13.1269 12.1666 12.6667 12.1666V13.1666C13.6792 13.1666 14.5 12.3458 14.5 11.3333H13.5ZM12.6667 12.1666H3.33333V13.1666H12.6667V12.1666ZM3.33333 12.1666C2.8731 12.1666 2.5 11.7935 2.5 11.3333H1.5C1.5 12.3458 2.32081 13.1666 3.33333 13.1666V12.1666ZM2.5 11.3333V4.66659H1.5V11.3333H2.5ZM2.5 4.66659C2.5 4.20635 2.8731 3.83325 3.33333 3.83325V2.83325C2.32081 2.83325 1.5 3.65406 1.5 4.66659H2.5Z"
-                fill="black"
+                class="fill-current"
               />
             </svg>
             <span> fborgobello@gmail.com </span>
@@ -53,9 +53,9 @@
             >
               <path
                 d="M8 12H8.00667M6.13333 14H9.86667C10.6134 14 10.9868 14 11.272 13.8547C11.5229 13.7269 11.7269 13.5229 11.8547 13.272C12 12.9868 12 12.6134 12 11.8667V4.13333C12 3.3866 12 3.01323 11.8547 2.72801C11.7269 2.47713 11.5229 2.27315 11.272 2.14533C10.9868 2 10.6134 2 9.86667 2H6.13333C5.3866 2 5.01323 2 4.72801 2.14533C4.47713 2.27315 4.27315 2.47713 4.14533 2.72801C4 3.01323 4 3.38659 4 4.13333V11.8667C4 12.6134 4 12.9868 4.14533 13.272C4.27315 13.5229 4.47713 13.7269 4.72801 13.8547C5.01323 14 5.38659 14 6.13333 14Z"
-                stroke="black"
                 stroke-linecap="round"
                 stroke-linejoin="round"
+                class="stroke-current"
               />
             </svg>
             <span> (+34) 601504552 </span>
@@ -72,13 +72,13 @@
             >
               <path
                 d="M7.99992 14C10.3333 11.6 12.6666 9.45093 12.6666 6.8C12.6666 4.14903 10.5773 2 7.99992 2C5.42259 2 3.33325 4.14903 3.33325 6.8C3.33325 9.45093 5.66659 11.6 7.99992 14Z"
-                stroke="black"
+                class="stroke-current"
                 stroke-linecap="round"
                 stroke-linejoin="round"
               />
               <path
                 d="M7.99992 8C8.73632 8 9.33325 7.40307 9.33325 6.66667C9.33325 5.93029 8.73632 5.33333 7.99992 5.33333C7.26352 5.33333 6.66659 5.93029 6.66659 6.66667C6.66659 7.40307 7.26352 8 7.99992 8Z"
-                stroke="black"
+                class="stroke-current"
                 stroke-linecap="round"
                 stroke-linejoin="round"
               />
@@ -131,7 +131,7 @@
               href="https://www.linkedin.com/in/fabriborgobello/"
               target="_blank"
               rel="noopener noreferrer"
-              class="text-blue-600 flex items-center p-2 sm:p-0 hover:underline"
+              class="text-blue-600 dark:text-blue-400 flex items-center p-2 sm:p-0 hover:underline"
               ><svg
                 width="16"
                 height="16"
@@ -153,7 +153,7 @@
               href="https://github.com/FabriBorgobello/"
               target="_blank"
               rel="noopener noreferrer"
-              class="text-blue-600 flex items-center p-2 sm:p-0 hover:underline"
+              class="text-blue-600 dark:text-blue-400 flex items-center p-2 sm:p-0 hover:underline"
               ><svg
                 width="16"
                 height="16"
