Add print tooltip

--- a/index.html
+++ b/index.html
@@ -331,5 +331,14 @@
         </li>
       </ul>
     </section>
+    <!-- Floating info -->
+    <div
+      class="hidden sm:block fixed bottom-2 right-2 print:hidden px-3 py-2 rounded bg-[#fafafa] dark:bg-[#141414] shadow-md opacity-85 hover:opacity-100 transition-opacity"
+    >
+      <p class="text-xs text-center">
+        Feel free to print this page for a simplified, style-less version of my
+        CV.
+      </p>
+    </div>
   </body>
 </html>
