--- a/index.html
+++ b/index.html
@@ -186,8 +186,12 @@
           <h4 class="italic">Front-end developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Developed fintech applications using ReactJs, NextJs, TypeScript,
-              and NodeJs.
+              Built a fintech platform for a B2B SaaS startup, focusing on both
+              frontend and backend development.
+            </li>
+            <li>
+              Implemented open banking integrations, PSD2 compliance, and
+              investment features.
             </li>
           </ul>
         </div>
