--- a/v2.html
+++ b/v2.html
@@ -18,7 +18,7 @@
     >
       <div class="flex flex-col sm:flex-row sm:justify-between">
         <h1 class="text-2xl font-bold">Fabricio Borgobello</h1>
-        <p class="text-xl">Front-end developer</p>
+        <p class="text-xl">Software Engineer - Lawyer</p>
       </div>
       <div class="flex flex-col md:flex-row sm:justify-between mt-4 print:mt-2">
         <ul
@@ -105,22 +105,6 @@
             </svg>
             <span>https://www.linkedin.com/in/fabriborgobello/ </span>
           </li>
-          <li class="flex items-center">
-            <svg
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-              fill="none"
-              class="mr-1"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8.00001 1.59998C4.46561 1.59998 1.60001 4.46558 1.60001 7.99998C1.60001 10.9989 3.66507 13.5082 6.44907 14.2026C6.41921 14.1162 6.40001 14.016 6.40001 13.8917V12.7978C6.14027 12.7978 5.70507 12.7978 5.59574 12.7978C5.15787 12.7978 4.76854 12.6096 4.57974 12.2597C4.37014 11.8709 4.33387 11.2762 3.81441 10.9125C3.66027 10.7914 3.77761 10.6533 3.95521 10.672C4.28321 10.7648 4.55521 10.9898 4.81121 11.3237C5.06614 11.6581 5.18614 11.7338 5.66241 11.7338C5.89334 11.7338 6.23894 11.7205 6.56427 11.6693C6.73921 11.225 7.04161 10.816 7.41121 10.6229C5.28001 10.4037 4.26294 9.34344 4.26294 7.90398C4.26294 7.28424 4.52694 6.68478 4.97547 6.17971C4.82827 5.67838 4.64321 4.65598 5.03201 4.26664C5.99094 4.26664 6.57067 4.88851 6.70987 5.05651C7.18774 4.89278 7.71254 4.79998 8.26401 4.79998C8.81654 4.79998 9.34347 4.89278 9.82241 5.05758C9.96001 4.89064 10.5403 4.26664 11.5013 4.26664C11.8917 4.65651 11.7045 5.68318 11.5557 6.18344C12.0016 6.68744 12.264 7.28531 12.264 7.90398C12.264 9.34237 11.2485 10.4021 9.12054 10.6224C9.70614 10.928 10.1333 11.7866 10.1333 12.4336V13.8917C10.1333 13.9472 10.1211 13.9872 10.1147 14.0346C12.6085 13.1605 14.4 10.7925 14.4 7.99998C14.4 4.46558 11.5344 1.59998 8.00001 1.59998Z"
-                class="fill-current"
-              />
-            </svg>
-            <span>https://github.com/FabriBorgobello/</span>
-          </li>
         </ul>
         <!-- SOCIAL MEDIA - SCREEN MODE -->
         <ul
@@ -148,42 +132,51 @@
               <span>LinkedIn</span>
             </a>
           </li>
-          <li>
-            <a
-              href="https://github.com/FabriBorgobello/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="text-blue-600 dark:text-blue-400 flex items-center p-2 sm:p-0 hover:underline"
-              ><svg
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
-                fill="none"
-                class="mr-1"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M8.00001 1.59998C4.46561 1.59998 1.60001 4.46558 1.60001 7.99998C1.60001 10.9989 3.66507 13.5082 6.44907 14.2026C6.41921 14.1162 6.40001 14.016 6.40001 13.8917V12.7978C6.14027 12.7978 5.70507 12.7978 5.59574 12.7978C5.15787 12.7978 4.76854 12.6096 4.57974 12.2597C4.37014 11.8709 4.33387 11.2762 3.81441 10.9125C3.66027 10.7914 3.77761 10.6533 3.95521 10.672C4.28321 10.7648 4.55521 10.9898 4.81121 11.3237C5.06614 11.6581 5.18614 11.7338 5.66241 11.7338C5.89334 11.7338 6.23894 11.7205 6.56427 11.6693C6.73921 11.225 7.04161 10.816 7.41121 10.6229C5.28001 10.4037 4.26294 9.34344 4.26294 7.90398C4.26294 7.28424 4.52694 6.68478 4.97547 6.17971C4.82827 5.67838 4.64321 4.65598 5.03201 4.26664C5.99094 4.26664 6.57067 4.88851 6.70987 5.05651C7.18774 4.89278 7.71254 4.79998 8.26401 4.79998C8.81654 4.79998 9.34347 4.89278 9.82241 5.05758C9.96001 4.89064 10.5403 4.26664 11.5013 4.26664C11.8917 4.65651 11.7045 5.68318 11.5557 6.18344C12.0016 6.68744 12.264 7.28531 12.264 7.90398C12.264 9.34237 11.2485 10.4021 9.12054 10.6224C9.70614 10.928 10.1333 11.7866 10.1333 12.4336V13.8917C10.1333 13.9472 10.1211 13.9872 10.1147 14.0346C12.6085 13.1605 14.4 10.7925 14.4 7.99998C14.4 4.46558 11.5344 1.59998 8.00001 1.59998Z"
-                  class="fill-current"
-                />
-              </svg>
-              <span>GitHub</span>
-            </a>
-          </li>
         </ul>
       </div>
+      <p class="mt-4">
+        Experienced lawyer and software developer with a passion for FinTech and
+        finance. Dedicated to bridging the gap between legal and technical
+        realms and eager to deepen my expertise in this area.
+      </p>
     </header>
+    <!-- EDUCATION -->
+    <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
+      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
+        EDUCATION
+      </h2>
+      <article>
+        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
+          <h3>Bachelor of Laws (LL.B)</h3>
+          <p>2016 - 2021</p>
+        </div>
+        <div>
+          <h4 class="italic">
+            Universidad Nacional de Córdoba (National University of Cordoba,
+            Argentina)
+          </h4>
+          <ul class="ml-8 list-disc">
+            <li>
+              Gained comprehensive knowledge of corporate and international law
+              through rigorous coursework and practical case studies, including
+              finance, taxation, securities market, contract law, and more.
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
+    <!-- WORK EXPERIENCE -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         WORK EXPERIENCE
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Pile Capital</h3>
+          <h3>Pile Capital GmbH</h3>
           <p>Feb 2024 - Present</p>
         </div>
         <div>
-          <h4 class="italic">Front-end developer</h4>
+          <h4 class="italic">Software Engineer</h4>
           <ul class="ml-8 list-disc">
             <li>
               Built a fintech platform for a B2B SaaS startup, focusing on both
@@ -202,39 +195,18 @@
           <p>Nov 2021 - Sep 2023</p>
         </div>
         <div>
-          <h4 class="italic">Back-end developer</h4>
+          <h4 class="italic">Software Enginerr - Technical lead</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Developed microservices using NodeJs, Express, NestJs, and others
-              for e-commerce and printing platforms.
-            </li>
-            <li>
-              Implemented event-driven architecture and REST API for enhanced
-              integration and functionality.
-            </li>
-            <li>
-              Successfully met all project objectives within a six-month period,
-              ending September 2023.
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h4 class="italic">Front-end developer - Technical lead</h4>
-          <ul class="ml-8 list-disc">
-            <li>
-              Led the transition to microservices architecture for a PropTech
-              platform using ReactJs/NextJs, Python/Django, and Azure DevOps.
+              Led the transition to a microservices architecture for a PropTech
+              platform.
             </li>
             <li>
               Managed client relations and team assembly, ensuring alignment
               with goals and high code quality.
             </li>
             <li>
-              Developed key tooling and UI libraries, enhancing scalability and
-              efficiency.
-            </li>
-            <li>
-              Successfully launched the project. Currently generating
+              Successfully launched the project, which is now generating
               significant revenue.
             </li>
           </ul>
@@ -246,15 +218,11 @@
           <p>Feb 2021 - Mar 2022</p>
         </div>
         <div>
-          <h4 class="italic">Front-end developer - Mobile developer</h4>
+          <h4 class="italic">Software Engineer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Front-end and mobile development for a multi-platform application
-              for personnel management.
-            </li>
-            <li>
-              UI design and layout development with React Js, TypeScript,
-              Angular and Ionic.
+              Created a web platform and a mobile application for a software
+              factory specializing in FinTech integrations.
             </li>
           </ul>
         </div>
@@ -265,21 +233,34 @@
           <p>Jun 2020 - Mar 2021</p>
         </div>
         <div>
-          <h4 class="italic">Front-end developer</h4>
+          <h4 class="italic">Software Engineer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Specialized in developing front-end for a security and monitoring
-              software suite using React.js, Redux and Jest.
+              Specialized in full-stack development for a security and
+              monitoring company.
             </li>
+          </ul>
+        </div>
+      </article>
+      <article>
+        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
+          <h3>Rodriguez Bris & Associates (Tax Law)</h3>
+          <p>Jun 2018 - Jun 2020</p>
+        </div>
+        <div>
+          <h4 class="italic">Legal Assistant</h4>
+          <ul class="ml-8 list-disc">
             <li>
-              Collaborated in full-stack development with Node, Express,
-              MongoDB, and Mongoose, enhancing back-end functionality and
-              database interactions.
+              Experienced in fiscal executions, mass collections, managing
+              complex and simultaneous legal processes. Assisted taxpayers in
+              finding the best ways to fulfill their tax obligations. Handled
+              both the legal and administrative aspects of the process.
             </li>
           </ul>
         </div>
       </article>
     </section>
+    <!-- TEACHING -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         TEACHING AND MENTORSHIP EXPERIENCE
@@ -318,17 +299,12 @@
         </div>
       </article>
     </section>
+    <!-- LANGUAGES -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
-        ADDITIONAL SKILLS AND LANGUAGES
+        LANGUAGES
       </h2>
       <ul class="ml-8 list-disc">
-        <li>
-          <b>Skills:</b>
-          JavaScript, TypeScript, HTML, CSS/SCSS, ReactJs, NextJs, React Native,
-          Ionic, NodeJs, Express, NestJs, Django, SQL, Postgres, Figma, Git,
-          Docker, Cypress, Playwright, Jest, React Testing Library, Vitest.
-        </li>
         <li>
           <b>Languages:</b>
           English (Advanced), Spanish (Native), Italian (Advanced).
