Rename law page

--- a/fintech.html
+++ b/fintech.html
@@ -173,11 +173,14 @@
         </ul>
       </div>
     </header>
-    <p class="mt-4">
-      Software developer specialized in frontend technologies, skilled in
-      creating smooth user experiences. Keen interest in fintech, about to start
-      a master's degree in the field.
-    </p>
+    <!-- OVERVIEW -->
+    <section class="mt-4">
+      <p>
+        Software developer specialized in frontend technologies, skilled in
+        creating smooth user experiences. Keen interest in fintech, about to
+        start a master's degree in the field.
+      </p>
+    </section>
     <section class="mt-6 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         WORK EXPERIENCE
