--- a/law.html
+++ b/law.html
@@ -134,12 +134,15 @@
           </li>
         </ul>
       </div>
-      <p class="mt-4">
+    </header>
+    <!-- OVERVIEW -->
+    <section class="mt-4">
+      <p>
         Experienced lawyer and software developer with a passion for FinTech and
         finance. Dedicated to bridging the gap between legal and technical
         realms and eager to deepen my expertise in this area.
       </p>
-    </header>
+    </section>
     <!-- EDUCATION -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
