Add acquisition in Pile

--- a/fintech.html
+++ b/fintech.html
@@ -201,6 +201,10 @@
               Implemented open banking integrations, PSD2 compliance, and
               investment features.
             </li>
+            <li>
+              The product was acquired and integrated into a top-tier financial
+              company.
+            </li>
           </ul>
         </div>
       </article>
@@ -232,10 +236,6 @@
             <li>
               Led the transition to microservices architecture for a PropTech
               platform using ReactJs/NextJs, Python/Django, and Azure DevOps.
-            </li>
-            <li>
-              Managed client relations and team assembly, ensuring alignment
-              with goals and high code quality.
             </li>
             <li>
               Developed key tooling and UI libraries, enhancing scalability and
@@ -334,8 +334,8 @@
         <li>
           <b>Skills:</b>
           JavaScript, TypeScript, HTML, CSS/SCSS, ReactJs, NextJs, React Native,
-          Ionic, NodeJs, Express, NestJs, Django, SQL, Postgres, Figma, Git,
-          Docker, Cypress, Playwright, Jest, React Testing Library, Vitest.
+          Ionic, NodeJs, Express, NestJs, SQL, Postgres, Figma, Git, Docker,
+          Cypress, Playwright, Jest, React Testing Library, Vitest.
         </li>
         <li>
           <b>Languages:</b>
