--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
               Implemented open banking integrations, PSD2 compliance, and
               investment features.
             </li>
+            <li>
+              The product was acquired and integrated into a top-tier financial
+              company.
+            </li>
           </ul>
         </div>
       </article>
@@ -224,10 +228,6 @@
             <li>
               Led the transition to microservices architecture for a PropTech
               platform using ReactJs/NextJs, Python/Django, and Azure DevOps.
-            </li>
-            <li>
-              Managed client relations and team assembly, ensuring alignment
-              with goals and high code quality.
             </li>
             <li>
               Developed key tooling and UI libraries, enhancing scalability and
