--- a/law.html
+++ b/law.html
@@ -189,6 +189,10 @@
               Implemented open banking integrations, PSD2 compliance, and
               investment features.
             </li>
+            <li>
+              The product was acquired and integrated into a top-tier financial
+              company.
+            </li>
           </ul>
         </div>
       </article>
