--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Pile Capital</h3>
+          <h3>Pile Capital (Acquired by Vivid Money)</h3>
           <p>Feb 2024 - Present</p>
         </div>
         <div>
@@ -286,7 +286,7 @@
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Next-U (short-term)</h3>
+          <h3>Next-U (contract, short-term)</h3>
           <p>Sept 2023 - Oct 2023</p>
         </div>
         <div>
@@ -302,7 +302,7 @@
       </article>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>CoderHouse (part-time)</h3>
+          <h3>CoderHouse (contract, part-time)</h3>
           <p>Nov 2020 – Jun 2022</p>
         </div>
         <div>
