--- a/law.html
+++ b/law.html
@@ -175,7 +175,7 @@
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Pile Capital GmbH</h3>
+          <h3>Pile Capital (Acquired by Vivid Money)</h3>
           <p>Feb 2024 - Present</p>
         </div>
         <div>
@@ -274,7 +274,7 @@
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Next-U (short-term)</h3>
+          <h3>Next-U (contract, short-term)</h3>
           <p>Sept 2023 - Oct 2023</p>
         </div>
         <div>
@@ -290,7 +290,7 @@
       </article>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>CoderHouse (part-time)</h3>
+          <h3>CoderHouse (contract, part-time)</h3>
           <p>Nov 2020 – Jun 2022</p>
         </div>
         <div>
