--- a/fintech.html
+++ b/fintech.html
@@ -177,9 +177,36 @@
     <section class="mt-4">
       <p>
         Software developer specialized in frontend technologies, skilled in
-        creating smooth user experiences. Keen interest in fintech, about to
-        start a master's degree in the field.
+        creating smooth user experiences. Keen interest in fintech.
       </p>
+    </section>
+
+    <section class="mt-6 space-y-4 print:mt-4 print:space-y-2">
+      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
+        EDUCATION
+      </h2>
+      <article>
+        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
+          <h3>Masters in Fintech and Financial Markets</h3>
+          <p>2024 - Expected 2025</p>
+        </div>
+        <div>
+          <h4 class="italic">
+            Universitat de Barcelona (Barcelona's University)
+          </h4>
+          <ul class="ml-8 list-disc">
+            <li>
+              Gaining proficiency in digital asset management, regulatory
+              frameworks, and investment analysis, with a focus on emerging
+              financial technologies.
+            </li>
+            <li>
+              Collaborating with industry professionals to explore innovative
+              financial solutions and emerging technologies
+            </li>
+          </ul>
+        </div>
+      </article>
     </section>
     <section class="mt-6 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
