--- a/fintech.html
+++ b/fintech.html
@@ -187,7 +187,7 @@
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Masters in Fintech and Financial Markets</h3>
+          <h3>Master in Fintech and Financial Markets</h3>
           <p>2024 - Expected 2025</p>
         </div>
         <div>
