Remove extra page

--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
         </ul>
       </div>
     </header>
+    <!-- OVERVIEW -->
+    <section class="mt-4">
+      <p>
+        Software developer specialized in frontend technologies, skilled in
+        creating smooth user experiences. Keen interest in fintech.
+      </p>
+    </section>
     <section class="mt-6 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         EDUCATION
