--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body
     class="px-8 py-16 text-slate-800 dark:text-[#f5f5f5] bg-white dark:bg-[#121212] max-w-[1000px] mx-auto print:p-0 print:max-w-full print:font-serif print:text-sm"
   >
+    <!-- CONTACT INFO -->
     <header
       class="border-b-[1px] border-b-slate-500 pb-4 print:border-none print:pb-0"
     >
@@ -83,7 +84,6 @@
                 stroke-linejoin="round"
               />
             </svg>
-
             <span> Barcelona, Spain </span>
           </li>
         </ul>
@@ -180,6 +180,7 @@
         creating smooth user experiences. Keen interest in fintech.
       </p>
     </section>
+    <!-- EDUCATION -->
     <section class="mt-6 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         EDUCATION
@@ -207,6 +208,7 @@
         </div>
       </article>
     </section>
+    <!-- WORK -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         WORK EXPERIENCE
@@ -314,6 +316,7 @@
         </div>
       </article>
     </section>
+    <!-- TEACHING -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         TEACHING AND MENTORSHIP EXPERIENCE
@@ -352,6 +355,7 @@
         </div>
       </article>
     </section>
+    <!-- SKILLS + LANGUAGES -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
         ADDITIONAL SKILLS AND LANGUAGES
@@ -369,7 +373,7 @@
         </li>
       </ul>
     </section>
-    <!-- Floating info -->
+    <!-- FLOATING BUTTON -->
     <button
       class="hidden sm:block fixed bottom-2 right-2 print:hidden px-3 py-2 rounded bg-[#fafafa] dark:bg-[#141414] shadow-md opacity-85 hover:opacity-100 transition-opacity cursor-pointer"
       onclick="window.print()"
