Move education to bottom

--- a/index.html
+++ b/index.html
@@ -180,34 +180,6 @@
         creating smooth user experiences. Keen interest in fintech.
       </p>
     </section>
-    <!-- EDUCATION -->
-    <section class="mt-6 space-y-4 print:mt-4 print:space-y-2">
-      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
-        EDUCATION
-      </h2>
-      <article>
-        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Master in Fintech and Financial Markets</h3>
-          <p>2024 - Expected 2025</p>
-        </div>
-        <div>
-          <h4 class="italic">
-            Universitat de Barcelona (Barcelona's University)
-          </h4>
-          <ul class="ml-8 list-disc">
-            <li>
-              Gaining proficiency in digital asset management, regulatory
-              frameworks, and investment analysis, with a focus on emerging
-              financial technologies.
-            </li>
-            <li>
-              Collaborating with industry professionals to explore innovative
-              financial solutions and emerging technologies
-            </li>
-          </ul>
-        </div>
-      </article>
-    </section>
     <!-- WORK -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
@@ -253,8 +225,7 @@
               integration and functionality.
             </li>
             <li>
-              Successfully met all project objectives within a six-month period,
-              ending September 2023.
+              Successfully met all project objectives within a six-month period.
             </li>
           </ul>
         </div>
@@ -290,7 +261,7 @@
             </li>
             <li>
               UI design and layout development with React Js, TypeScript,
-              Angular and Ionic.
+              Angular, Ionic and Capacitor.
             </li>
           </ul>
         </div>
@@ -316,6 +287,30 @@
         </div>
       </article>
     </section>
+    <!-- EDUCATION -->
+    <section class="mt-6 space-y-4 print:mt-4 print:space-y-2">
+      <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
+        EDUCATION
+      </h2>
+      <article>
+        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
+          <h3>Master in Fintech and Financial Markets</h3>
+          <p>2024 - Expected 2025</p>
+        </div>
+        <div>
+          <h4 class="italic">
+            Universitat de Barcelona (Barcelona's University)
+          </h4>
+          <ul class="ml-8 list-disc">
+            <li>
+              Delving into digital asset management and regulatory frameworks
+              within the fintech sector, engaging with industry professionals on
+              innovative technologies.
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
     <!-- TEACHING -->
     <section class="mt-8 space-y-4 print:mt-4 print:space-y-2">
       <h2 class="text-lg font-bold border-b-slate-500 border-b-[1px] uppercase">
@@ -330,9 +325,8 @@
           <h4 class="italic">Front-end Instructor - Project Mentor</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Teaching and mentoring students in class sessions for a two-month
-              project, guiding them through the development and execution of
-              projects that emulate real-world scenarios.
+              Teaching and mentoring students through the development and
+              execution of projects that emulate real-world scenarios.
             </li>
           </ul>
         </div>
@@ -347,9 +341,8 @@
           <ul class="ml-8 list-disc">
             <li>
               Provided engaging instruction in React.js, from foundational to
-              advanced topics, to a diverse group of learners. Facilitated
-              hands-on project experience with objective feedback to improve
-              learning outcomes.
+              advanced topics. Facilitated hands-on project experience with
+              objective feedback to improve learning outcomes.
             </li>
           </ul>
         </div>
@@ -362,10 +355,11 @@
       </h2>
       <ul class="ml-8 list-disc">
         <li>
-          <b>Skills:</b>
-          JavaScript, TypeScript, HTML, CSS/SCSS, ReactJs, NextJs, React Native,
-          Ionic, NodeJs, Express, NestJs, Django, SQL, Postgres, Figma, Git,
-          Docker, Cypress, Playwright, Jest, React Testing Library, Vitest.
+          <b>Other skills:</b>
+          Animations, internationalization, accessibility, localization, HTML,
+          CSS/SCSS, JavaScript, TypeScript, React, NextJs, React Native, SQL,
+          Postgres, Git, Docker, Figma, Framer Motion, Cypress, Playwright,
+          Jest, React Testing Library, Vitest.
         </li>
         <li>
           <b>Languages:</b>
