--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     >
       <div class="flex flex-col sm:flex-row sm:justify-between">
         <h1 class="text-2xl font-bold">Fabricio Borgobello</h1>
-        <p class="text-xl">Front-end developer</p>
+        <p class="text-xl">Software developer</p>
       </div>
       <div class="flex flex-col md:flex-row sm:justify-between mt-4 print:mt-2">
         <ul
@@ -176,7 +176,7 @@
     <!-- OVERVIEW -->
     <section class="mt-4">
       <p>
-        Software developer specialized in frontend technologies, skilled in
+        Full-stack developer specialized in frontend technologies, skilled in
         creating smooth user experiences. Keen interest in fintech.
       </p>
     </section>
@@ -187,8 +187,28 @@
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
+          <h3>Fully AI (Aquired by Circus)</h3>
+          <p>Sep 2024 - Present</p>
+        </div>
+        <div>
+          <h4 class="italic">Software developer</h4>
+          <ul class="ml-8 list-disc">
+            <li>
+              Developed an AI platform focused on making AI interactions more
+              human and user-friendly.
+            </li>
+            <li>
+              Worked with technologies such as OpenAI, Firecrawl, Realtime API,
+              Langchain, ElevenLabs, and more to enhance functionality and user
+              experience.
+            </li>
+          </ul>
+        </div>
+      </article>
+      <article>
+        <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
           <h3>Pile Capital (Acquired by Vivid Money)</h3>
-          <p>Feb 2024 - Present</p>
+          <p>Jan 2024 - Aug 2024</p>
         </div>
         <div>
           <h4 class="italic">Front-end developer</h4>
@@ -295,7 +315,7 @@
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
           <h3>Master in Fintech and Financial Markets</h3>
-          <p>2024 - Expected 2025</p>
+          <p>2024</p>
         </div>
         <div>
           <h4 class="italic">
@@ -303,9 +323,8 @@
           </h4>
           <ul class="ml-8 list-disc">
             <li>
-              Delving into digital asset management and regulatory frameworks
-              within the fintech sector, engaging with industry professionals on
-              innovative technologies.
+              Specialized in digital asset management, regulatory frameworks,
+              and innovative technologies within the fintech startup ecosystem.
             </li>
           </ul>
         </div>
