--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Fabricio Borgobello is a frontend developer with skills in JavaScript, TypeScript, and React. Contact him via email or LinkedIn to learn more."
+      content="Software developer with skills in JavaScript, TypeScript, Node, and React. Contact him via email or LinkedIn to learn more."
     />
     <link href="./output.css" rel="stylesheet" />
     <title>Fabricio Borgobello - Curriculum Vitae</title>
