--- a/index.html
+++ b/index.html
@@ -218,8 +218,11 @@
               frontend and backend development.
             </li>
             <li>
-              Implemented open banking integrations, PSD2 compliance, and
-              investment features.
+              Implemented open banking integrations with multiple European
+              banks, ensuring PSD2 compliance, and robust investment features.
+            </li>
+            <li>
+              Led accessibility initiatives achieving WCAG 2.1 AA compliance.
             </li>
             <li>
               The product was acquired and integrated into a top-tier financial
@@ -257,8 +260,9 @@
               platform using ReactJs/NextJs, Python/Django, and Azure DevOps.
             </li>
             <li>
-              Developed key tooling and UI libraries, enhancing scalability and
-              efficiency.
+              Built and maintained a comprehensive design system with atomic
+              design principles, including development of key UI libraries and
+              tooling.
             </li>
             <li>
               Successfully launched the project. Currently generating
@@ -338,7 +342,7 @@
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
           <h3>Next-U (contract, short-term)</h3>
-          <p>Sept 2023 - Oct 2023</p>
+          <p>2023</p>
         </div>
         <div>
           <h4 class="italic">Front-end Instructor - Project Mentor</h4>
@@ -353,7 +357,7 @@
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
           <h3>CoderHouse (contract, part-time)</h3>
-          <p>Nov 2020 – Jun 2022</p>
+          <p>2020 – 2022</p>
         </div>
         <div>
           <h4 class="italic">React Js teacher</h4>
@@ -375,10 +379,13 @@
       <ul class="ml-8 list-disc">
         <li>
           <b>Other skills:</b>
-          Animations, internationalization, accessibility, localization, HTML,
-          CSS/SCSS, JavaScript, TypeScript, React, NextJs, React Native, SQL,
-          Postgres, Git, Docker, Figma, Framer Motion, Cypress, Playwright,
-          Jest, React Testing Library, Vitest.
+          Performance optimization (bundle analysis, code splitting, lazy
+          loading, caching strategies), Web Accessibility (WCAG 2.1, ARIA,
+          semantic HTML, screen readers), Internationalization (i18n, RTL
+          support, dynamic translations), animations, HTML, CSS/SCSS,
+          JavaScript, TypeScript, React, NextJs, React Native, SQL, Postgres,
+          Git, Docker, Figma, Framer Motion, Cypress, Playwright, Jest, React
+          Testing Library, Vitest.
         </li>
         <li>
           <b>Languages:</b>
