--- a/index.html
+++ b/index.html
@@ -214,12 +214,9 @@
           <h4 class="italic">Front-end developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Built a fintech platform for a B2B SaaS startup, focusing on both
-              frontend and backend development.
-            </li>
-            <li>
-              Implemented open banking integrations with multiple European
-              banks, ensuring PSD2 compliance, and robust investment features.
+              Built a fintech platform for a B2B SaaS startup, working on both
+              frontend and backend, with integrations to multiple European banks
+              for PSD2 compliance and investment features.
             </li>
             <li>
               Led accessibility initiatives achieving WCAG 2.1 AA compliance.
@@ -241,14 +238,11 @@
           <ul class="ml-8 list-disc">
             <li>
               Developed microservices using NodeJs, Express, NestJs, and others
-              for e-commerce and printing platforms.
+              for an entertainment platform.
             </li>
             <li>
               Implemented event-driven architecture and REST API for enhanced
               integration and functionality.
-            </li>
-            <li>
-              Successfully met all project objectives within a six-month period.
             </li>
           </ul>
         </div>
@@ -260,9 +254,8 @@
               platform using ReactJs/NextJs, Python/Django, and Azure DevOps.
             </li>
             <li>
-              Built and maintained a comprehensive design system with atomic
-              design principles, including development of key UI libraries and
-              tooling.
+              Built and maintained a design system with atomic design
+              principles, including development of UI libraries and tooling.
             </li>
             <li>
               Successfully launched the project. Currently generating
@@ -299,13 +292,9 @@
           <h4 class="italic">Front-end developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Specialized in developing front-end for a security and monitoring
-              software suite using React.js, Redux and Jest.
-            </li>
-            <li>
-              Collaborated in full-stack development with Node, Express,
-              MongoDB, and Mongoose, enhancing back-end functionality and
-              database interactions.
+              Built front-end interfaces with React.js, Redux, and Jest, and
+              developed back-end services with Node.js, Express, and MongoDB for
+              a security and monitoring platform.
             </li>
           </ul>
         </div>
@@ -364,8 +353,7 @@
           <ul class="ml-8 list-disc">
             <li>
               Provided engaging instruction in React.js, from foundational to
-              advanced topics. Facilitated hands-on project experience with
-              objective feedback to improve learning outcomes.
+              advanced topics. Facilitated hands-on project experience.
             </li>
           </ul>
         </div>
@@ -380,12 +368,12 @@
         <li>
           <b>Other skills:</b>
           Performance optimization (bundle analysis, code splitting, lazy
-          loading, caching strategies), Web Accessibility (WCAG 2.1, ARIA,
+          loading, caching strategies), SEO,Web Accessibility (WCAG 2.1, ARIA,
           semantic HTML, screen readers), Internationalization (i18n, RTL
           support, dynamic translations), animations, HTML, CSS/SCSS,
           JavaScript, TypeScript, React, NextJs, React Native, SQL, Postgres,
           Git, Docker, Figma, Framer Motion, Cypress, Playwright, Jest, React
-          Testing Library, Vitest.
+          Testing Library, Vitest, Storybook.
         </li>
         <li>
           <b>Languages:</b>
