--- a/index.html
+++ b/index.html
@@ -187,20 +187,21 @@
       </h2>
       <article>
         <div class="flex flex-col sm:flex-row sm:justify-between font-bold">
-          <h3>Fully AI (Aquired by Circus)</h3>
+          <h3>Circus Group</h3>
           <p>Sep 2024 - Present</p>
         </div>
         <div>
           <h4 class="italic">Software developer</h4>
           <ul class="ml-8 list-disc">
             <li>
-              Developed an AI platform focused on making AI interactions more
-              human and user-friendly.
+              Built software for AI-powered robotic kitchens that cook and serve
+              meals autonomously across retail, healthcare, and military
+              sectors.
             </li>
             <li>
-              Worked with technologies such as OpenAI, Firecrawl, Realtime API,
-              Langchain, ElevenLabs, and more to enhance functionality and user
-              experience.
+              Developed intuitive web, voice, and touch interfaces for CircusOS,
+              allowing customers and operators to easily interact with robotic
+              food service systems.
             </li>
           </ul>
         </div>
