--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <p>Jan 2024 - Aug 2024</p>
         </div>
         <div>
-          <h4 class="italic">Front-end developer</h4>
+          <h4 class="italic">Software developer</h4>
           <ul class="ml-8 list-disc">
             <li>
               Built a fintech platform for a B2B SaaS startup, working on both
